waybar(style): Add module margins to avoid clipping shadows

--- a/config/waybar/style.css
+++ b/config/waybar/style.css
@@ -20,7 +20,7 @@
 .modules-center,
 .modules-left {
     background-color: transparent;
-    margin: 5px 3px;
+    margin: 3px 3px;
 }
 
 tooltip {
@@ -55,7 +55,7 @@ tooltip.background {
 #session-time {
     background-color: @surface;
     border-radius: 100px;
-    margin: 0 3px;
+    margin: 2px 3px;
     box-shadow:
         inset 0.5px 1.2px 1.5px -0.7px @light-medium,
               0.4px 0.7px 1.0px  0     @shadow-medium;
